[package]
name = "native-1c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13.0"
widestring = "1.0.2"
native_macro = { path = "./macros" }
derivative = "2.2.0"
lazy_static = "1.4.0"
libc = "0.2.126"